// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeightPopoverWidth snapshots should render HeightPopoverWidth{max} 1`] = `
<DocumentFragment>
  <div
    class="css-1wfopar PopoverItem PopoverItem--light"
    data-test-box=""
    data-test-popover-item="0"
  >
    <div
      class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
      data-test-text=""
      style="text-align: inherit;"
    >
      Set to current width
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem PopoverItem--light"
    data-test-box=""
    data-test-popover-item="1"
  >
    <div
      class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
      data-test-text=""
      style="text-align: inherit;"
    >
      Remove max width
    </small>
  </div>
</DocumentFragment>
`;

exports[`HeightPopoverWidth snapshots should render HeightPopoverWidth{min} 1`] = `
<DocumentFragment>
  <div
    class="css-1wfopar PopoverItem PopoverItem--light"
    data-test-box=""
    data-test-popover-item="0"
  >
    <div
      class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
      data-test-text=""
      style="text-align: inherit;"
    >
      Set to current width
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem PopoverItem--light"
    data-test-box=""
    data-test-popover-item="1"
  >
    <div
      class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
      data-test-text=""
      style="text-align: inherit;"
    >
      Remove min width
    </small>
  </div>
</DocumentFragment>
`;
